force-app/main/default/objects/pse__Timecard_Entry_UI_Global__c/pse__Timecard_Entry_UI_Global__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ORG wide settings for Timecard UI. These settings will derive the Timecard UI behavior for everyone in organization.</description>
    <label>Timecard Entry UI Global</label>
</CustomObject>