force-app/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Allow_Time_Entry_For_Summary_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Time_Entry_For_Summary_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, task time entry for summary tasks is allowed.</description>
    <inlineHelpText>If selected, task time entry for summary tasks is allowed.</inlineHelpText>
    <label>Allow Time Entry for Summary Task</label>
    <type>Checkbox</type>
</CustomField>