force-app/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Resource_access__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_access__c</fullName>
    <defaultValue>&quot;all&quot;</defaultValue>
    <description>If the config value equals &apos;all&apos; , this means all of the resources will be loaded, that the current user has permission control access for, to log time. If the value equals &apos;resource&apos; or null, only the current user resource will be loaded.</description>
    <inlineHelpText>If config value equals to &apos;all&apos; , means all resources along with current user resources will be loaded. Else if value equals to &apos;resource&apos; or null, only current user resources will be loaded.</inlineHelpText>
    <label>Resource access</label>
    <length>30</length>
    <type>Text</type>
</CustomField>